# virtual_stain_flow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cp_gan_env.yml  pyproject.toml  pytest.ini
.github/workflows/: pre-commit.yml
callbacks/: AbstractCallback.py  IntermediatePlot.py  MlflowLogger.py  README.md
datasets/: CachedDataset.py  ImageDataset.py  PatchDataset.py
evaluation/: evaluation_utils.py  plot_utils.py  predict_utils.py  visualization_utils.py
examples/: 0.download_example_dataset.ipynb  1.modular_unet_example.ipynb  2.training_with_logging_example.ipynb  3.training_wgan_with_logging_example.ipynb  4.data_augmentation_example.ipynb  dataset_example.ipynb  generate_sample_patch_dataset.ipynb  minimal_example.ipynb  minimal_example_generic_dataset.ipynb  modular_unet_example.ipynb  nbconvert.sh
examples/nbconverted/: 0.download_example_dataset.py  1.modular_unet_example.py  (+6 more)
logging/: MlflowLogger.py  MlflowLoggerV2.py  README.md  __init__.py
losses/: AbstractLoss.py  DiscriminatorLoss.py  GeneratorLoss.py  GradientPenaltyLoss.py  README.md
metrics/: AbstractMetrics.py  MetricsWrapper.py  PSNR.py  SSIM.py
models/: README.md  blocks.py  decoder.py  discriminator.py  encoder.py  fnet.py  handle_type_checking.py  stages.py  unet.py  unet_utils.py  up_down_blocks.py
tests/: conftest.py
trainers/: AbstractLoggingTrainer.py  AbstractTrainer.py  README.md  Trainer.py  TrainerV2.py  WGANTrainer.py  WGaNTrainer.py  __init__.py
transforms/: MinMaxNormalize.py  PixelDepthTransform.py  README.md  ZScoreNormalize.py
(+153 files in other folders)
